// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dot notation whitespaces 1`] = `
{
  "body": [
    {
      "expression": {
        "computed": false,
        "location": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "source": "",
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "object": {
          "location": {
            "end": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "name": "o",
          "type": "VariableIdentifier",
        },
        "property": {
          "location": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "source": "",
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "name": "a",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "location": {
        "end": {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 2`] = `
{
  "body": [
    {
      "body": [
        {
          "expression": {
            "computed": false,
            "location": {
              "end": {
                "column": 3,
                "line": 2,
                "offset": 10,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 2,
                "offset": 8,
              },
            },
            "object": null,
            "property": {
              "location": {
                "end": {
                  "column": 3,
                  "line": 2,
                  "offset": 10,
                },
                "source": "",
                "start": {
                  "column": 2,
                  "line": 2,
                  "offset": 9,
                },
              },
              "name": "a",
              "type": "Identifier",
            },
            "type": "MemberExpression",
          },
          "location": {
            "end": {
              "column": 1,
              "line": 3,
              "offset": 11,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "ExpressionStatement",
        },
      ],
      "location": {
        "end": {
          "column": 8,
          "line": 3,
          "offset": 18,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "object": {
        "location": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "source": "",
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "name": "o",
        "type": "VariableIdentifier",
      },
      "type": "WithStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 3`] = `
{
  "body": [
    {
      "expression": {
        "computed": false,
        "location": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "source": "",
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "object": {
          "computed": false,
          "location": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "object": {
            "location": {
              "end": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "name": "o",
            "type": "VariableIdentifier",
          },
          "property": {
            "location": {
              "end": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
              "source": "",
              "start": {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
            },
            "name": "a",
            "type": "Identifier",
          },
          "type": "MemberExpression",
        },
        "property": {
          "location": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "source": "",
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "name": "b",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "location": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 4`] = `
{
  "body": [
    {
      "body": [
        {
          "expression": {
            "computed": false,
            "location": {
              "end": {
                "column": 5,
                "line": 2,
                "offset": 12,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 2,
                "offset": 8,
              },
            },
            "object": {
              "computed": false,
              "location": {
                "end": {
                  "column": 3,
                  "line": 2,
                  "offset": 10,
                },
                "source": "",
                "start": {
                  "column": 1,
                  "line": 2,
                  "offset": 8,
                },
              },
              "object": null,
              "property": {
                "location": {
                  "end": {
                    "column": 3,
                    "line": 2,
                    "offset": 10,
                  },
                  "source": "",
                  "start": {
                    "column": 2,
                    "line": 2,
                    "offset": 9,
                  },
                },
                "name": "a",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            "property": {
              "location": {
                "end": {
                  "column": 5,
                  "line": 2,
                  "offset": 12,
                },
                "source": "",
                "start": {
                  "column": 4,
                  "line": 2,
                  "offset": 11,
                },
              },
              "name": "b",
              "type": "Identifier",
            },
            "type": "MemberExpression",
          },
          "location": {
            "end": {
              "column": 1,
              "line": 3,
              "offset": 13,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "ExpressionStatement",
        },
      ],
      "location": {
        "end": {
          "column": 8,
          "line": 3,
          "offset": 20,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "object": {
        "location": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "source": "",
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "name": "o",
        "type": "VariableIdentifier",
      },
      "type": "WithStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 5`] = `
{
  "body": [
    {
      "expression": {
        "computed": false,
        "location": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "source": "",
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "object": {
          "location": {
            "end": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "name": "o",
          "type": "VariableIdentifier",
        },
        "property": {
          "location": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "source": "",
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "name": "a",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "location": {
        "end": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 6`] = `
{
  "body": [
    {
      "expression": {
        "computed": false,
        "location": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "source": "",
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "object": {
          "computed": false,
          "location": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "object": {
            "location": {
              "end": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "name": "o",
            "type": "VariableIdentifier",
          },
          "property": {
            "location": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "source": "",
              "start": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
            },
            "name": "a",
            "type": "Identifier",
          },
          "type": "MemberExpression",
        },
        "property": {
          "location": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "source": "",
            "start": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "name": "b",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "location": {
        "end": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 7`] = `
{
  "body": [
    {
      "body": [
        {
          "expression": {
            "computed": false,
            "location": {
              "end": {
                "column": 6,
                "line": 2,
                "offset": 13,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 2,
                "offset": 8,
              },
            },
            "object": {
              "computed": false,
              "location": {
                "end": {
                  "column": 3,
                  "line": 2,
                  "offset": 10,
                },
                "source": "",
                "start": {
                  "column": 1,
                  "line": 2,
                  "offset": 8,
                },
              },
              "object": null,
              "property": {
                "location": {
                  "end": {
                    "column": 3,
                    "line": 2,
                    "offset": 10,
                  },
                  "source": "",
                  "start": {
                    "column": 2,
                    "line": 2,
                    "offset": 9,
                  },
                },
                "name": "a",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            "property": {
              "location": {
                "end": {
                  "column": 6,
                  "line": 2,
                  "offset": 13,
                },
                "source": "",
                "start": {
                  "column": 5,
                  "line": 2,
                  "offset": 12,
                },
              },
              "name": "b",
              "type": "Identifier",
            },
            "type": "MemberExpression",
          },
          "location": {
            "end": {
              "column": 1,
              "line": 3,
              "offset": 14,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "ExpressionStatement",
        },
      ],
      "location": {
        "end": {
          "column": 8,
          "line": 3,
          "offset": 21,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "object": {
        "location": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "source": "",
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "name": "o",
        "type": "VariableIdentifier",
      },
      "type": "WithStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 8`] = `undefined`;

exports[`dot notation whitespaces 9`] = `undefined`;

exports[`dot notation whitespaces 10`] = `undefined`;

exports[`dot notation whitespaces 11`] = `undefined`;

exports[`dot notation whitespaces 12`] = `
{
  "body": [
    {
      "expression": {
        "computed": false,
        "location": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "source": "",
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "object": {
          "arguments": [],
          "callee": {
            "location": {
              "end": {
                "column": 2,
                "line": 1,
                "offset": 1,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "name": "f",
            "type": "Identifier",
          },
          "location": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "CallExpression",
        },
        "property": {
          "location": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "source": "",
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "name": "a",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "location": {
        "end": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 13`] = `
{
  "body": [
    {
      "expression": {
        "computed": false,
        "location": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "source": "",
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "object": {
          "computed": false,
          "location": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "source": "",
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "object": {
            "arguments": [],
            "callee": {
              "location": {
                "end": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "source": "",
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "name": "f",
              "type": "Identifier",
            },
            "location": {
              "end": {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": "CallExpression",
          },
          "property": {
            "location": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "source": "",
              "start": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
            },
            "name": "a",
            "type": "Identifier",
          },
          "type": "MemberExpression",
        },
        "property": {
          "location": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "source": "",
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "name": "b",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "location": {
        "end": {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 14`] = `
{
  "body": [
    {
      "expression": {
        "computed": false,
        "location": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "source": "",
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "object": {
          "arguments": [],
          "callee": {
            "location": {
              "end": {
                "column": 2,
                "line": 1,
                "offset": 1,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "name": "f",
            "type": "Identifier",
          },
          "location": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "CallExpression",
        },
        "property": {
          "location": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "source": "",
            "start": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "name": "a",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "location": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 15`] = `
{
  "body": [
    {
      "expression": {
        "computed": false,
        "location": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "source": "",
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "object": {
          "computed": false,
          "location": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "source": "",
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "object": {
            "arguments": [],
            "callee": {
              "location": {
                "end": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "source": "",
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "name": "f",
              "type": "Identifier",
            },
            "location": {
              "end": {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": "CallExpression",
          },
          "property": {
            "location": {
              "end": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
              "source": "",
              "start": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "name": "a",
            "type": "Identifier",
          },
          "type": "MemberExpression",
        },
        "property": {
          "location": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "source": "",
            "start": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "name": "b",
          "type": "Identifier",
        },
        "type": "MemberExpression",
      },
      "location": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "ExpressionStatement",
    },
  ],
  "type": "Program",
}
`;

exports[`dot notation whitespaces 16`] = `undefined`;

exports[`dot notation whitespaces 17`] = `undefined`;
